--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
     "next": "15.3.1",
     "react": "^19.0.0",
